--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,15 +1,15 @@
+@forward 'cookie-consent';
+@forward 'site-header';
 @forward 'code-block';
 @forward 'docs-cards';
 @forward 'error-404';
 @forward 'footer';
-@forward 'header';
 @forward 'hero';
 @forward 'notification';
 @forward 'preview';
 @forward 'sidebar';
 @forward 'skip-link';
 @forward 'table-of-content';
-@forward 'cookie-consent';
 @forward 'entry-content';
 @forward 'page-navigation';
 @forward 'theme-switcher';
