--- a/src/styles/components/_site-header.scss
+++ b/src/styles/components/_site-header.scss
@@ -4,7 +4,7 @@
   &__inner {
     align-items: center;
     display: flex;
-    gap: clamp(#{spruce.spacer(s)}, 3vw + 1rem, #{spruce.spacer(l)});
+    gap: clamp(#{spruce.spacer(xs)}, 3vw, #{spruce.spacer(l)});
     justify-content: space-between;
     height: 5rem;
     position: relative;
@@ -20,7 +20,7 @@
 
     svg {
       bottom: -0.1em;
-      height: 1.85rem;
+      height: 1.75rem;
       position: relative;
       width: auto;
     }
@@ -39,25 +39,12 @@
       line-height: 1;
       margin-inline-start: spruce.spacer(m);
       padding-inline-start: spruce.spacer(m);
-
     }
   }
 
   &__toggle {
-    align-items: center;
-    border-radius: 1rem;
-    justify-content: center;
-    height: 2.75rem;
-    padding: 0;
-    width: 2.75rem;
-
     @include spruce.breakpoint(md) {
       display: none;
-    }
-
-    svg {
-      height: 0.85rem;
-      width: 0.85rem;
     }
 
     &[aria-expanded='true'] + ul {
@@ -70,42 +57,40 @@
     display: flex;
     flex-grow: 1;
     font-family: spruce.$font-family-heading;
-    justify-content: center;
+    justify-content: flex-end;
+
+    @include spruce.breakpoint(md) {
+      justify-content: center;
+    }
 
     ul {
-      background-color: transparent;
+      @include spruce.clear-list;
+      background-color: spruce.color(background);
       border-top: 1px dashed spruce.color(border);
       display: none;
       flex-direction: column;
       flex-wrap: wrap;
-      left: 0;
-      list-style: none;
-      margin: 0;
-      padding: spruce.spacer(s) 0;
+      column-gap: spruce.spacer(l);
+      inset: 100% 0 auto 0;
+      padding-block: spruce.spacer(m);
       position: absolute;
-      right: 0;
-      top: 100%;
+      row-gap: spruce.spacer(m);
       z-index: 10;
 
       @include spruce.breakpoint(md) {
+        background-color: transparent;
         border: 0;
         display: flex;
         flex-direction: row;
-        left: auto;
-        padding: 0;
+        inset: auto;
+        padding-block: 0;
         position: relative;
-        right: auto;
-        top: auto;
       }
     }
 
-    li + li {
-      margin-top: spruce.spacer(s);
-
-      @include spruce.breakpoint(md) {
-        margin-top: 0;
-        margin-inline-start: 3rem;
-      }
+    li {
+      line-height: 1;
+      margin-block-start: 0;
     }
 
     a {
