--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,7 +1,7 @@
 @forward 'cookie-consent';
 @forward 'site-header';
 @forward 'code-block';
-@forward 'docs-cards';
+@forward 'doc-cards';
 @forward 'error-404';
 @forward 'footer';
 @forward 'hero';
