--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 body {
   --doc-heading-font-family: 'Sora', sans-serif;
   --doc-body-font-family: 'Open Sans', sans-serif;
+  --doc-border-radius-sm: 1.25rem;
   --doc-border-radius-lg: 2rem;
 
   background-color: spruce.color(background);
