--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -5,12 +5,12 @@
 @forward 'error-404';
 @forward 'footer';
 @forward 'hero';
+@forward 'card';
 @forward 'notification';
 @forward 'preview';
 @forward 'sidebar';
 @forward 'skip-link';
 @forward 'table-of-content';
-@forward 'entry-content';
 @forward 'page-navigation';
 @forward 'theme-switcher';
 @forward 'page-heading';
