--- a/src/styles/layouts/_page.scss
+++ b/src/styles/layouts/_page.scss
@@ -1,7 +1,7 @@
 @use '~sprucecss/scss/spruce';
 
-.layout-page {
-  padding: clamp(spruce.spacer(l), 5vw, spruce.spacer(xl)) 0;
+.l-page {
+  padding-block: clamp(spruce.spacer(l), 5vw, spruce.spacer(xl));
 
   &__container {
     @include spruce.layout-center(
@@ -16,10 +16,10 @@
       $scaler: 40,
       $optimal-size: '3vw + 1rem'
     );
-    margin: 0;
+    margin-block: 0;
   }
 
   &__meta {
-    margin-top: spruce.spacer(xs);
+    margin-block-start: spruce.spacer(xs);
   }
 }
