--- a/src/styles/components/card/_blog.scss
+++ b/src/styles/components/card/_blog.scss
@@ -6,7 +6,7 @@
   );
 
   &__thumbnail {
-    border-radius: spruce.$border-radius-lg;
+    border-radius: var(--doc-border-radius-sm);
   }
 
   &__meta {
