--- a/src/styles/config/_dark-mode.scss
+++ b/src/styles/config/_dark-mode.scss
@@ -5,7 +5,7 @@
   ':root[data-theme-mode="dark"]'
 );
 
-[data-theme-mode="dark"] {
+[data-theme-mode='dark'] {
   color-scheme: dark;
 
   select.form-control:not([multiple]):not([size]) {
