--- a/src/styles/components/_notification.scss
+++ b/src/styles/components/_notification.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use '~sprucecss/scss/spruce';
 
 .notification {
@@ -16,7 +17,7 @@
   }
 
   &--info {
-    background-color: rgba(spruce.color(info, alert, true), 0.1);
+    background-color: color.change(spruce.color(info, alert, true), $alpha: 0.1);
     border-top: 0.5rem solid spruce.color(info, alert);
 
     #{$this}__icon {
@@ -26,12 +27,12 @@
     code,
     kbd,
     samp {
-      border-color: rgba(spruce.color(info, alert, true), 0.5);
+      border-color: color.change(spruce.color(info, alert, true), $alpha: 0.5);
     }
   }
 
   &--correct {
-    background-color: rgba(spruce.color(success, alert, true), 0.1);
+    background-color: color.change(spruce.color(success, alert, true), $alpha: 0.1);
     border-top: 0.5rem solid spruce.color(success, alert);
 
     #{$this}__icon {
@@ -41,12 +42,12 @@
     code,
     kbd,
     samp {
-      border-color: rgba(spruce.color(success, alert, true), 0.5);
+      border-color: color.change(spruce.color(success, alert, true), $alpha: 0.5);
     }
   }
 
   &--wrong {
-    background-color: rgba(spruce.color(danger, alert, true), 0.1);
+    background-color: color.change(spruce.color(danger, alert, true), $alpha: 0.1);
     border-top: 0.5rem solid spruce.color(danger, alert);
 
     #{$this}__icon {
@@ -56,7 +57,7 @@
     code,
     kbd,
     samp {
-      border-color: rgba(spruce.color(danger, alert, true), 0.5);
+      border-color: color.change(spruce.color(danger, alert, true), $alpha: 0.5);
     }
   }
 
@@ -68,10 +69,9 @@
     background-color: spruce.color(background);
     border: 4px solid spruce.color(background);
     border-radius: 1rem;
+    inset: calc(-1rem - 4px) -1rem auto;
     height: 2rem;
     position: absolute;
-    right: -1rem;
-    top: calc(-1rem - 4px);
     width: 2rem;
   }
 }
