--- a/src/styles/components/prism/_dark.scss
+++ b/src/styles/components/prism/_dark.scss
@@ -1,122 +1,122 @@
-[data-theme-mode="dark"] {
-  code[class*="language-"],
-  pre[class*="language-"] {
+[data-theme-mode='dark'] {
+  code[class*='language-'],
+  pre[class*='language-'] {
     color: #d6deeb;
-    font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-    text-align: left;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    word-wrap: normal;
+    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+
+    hyphens: none;
+    hyphens: none;
+    hyphens: none;
+    hyphens: none;
     line-height: 1.5;
 
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
     tab-size: 4;
-
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
+    tab-size: 4;
+    tab-size: 4;
+    text-align: left;
+    white-space: pre;
+    word-break: normal;
+    word-spacing: normal;
+    word-wrap: normal;
   }
 
-  pre[class*="language-"]::-moz-selection,
-  pre[class*="language-"] ::-moz-selection,
-  code[class*="language-"]::-moz-selection,
-  code[class*="language-"] ::-moz-selection {
+  pre[class*='language-']::-moz-selection,
+  pre[class*='language-'] ::-moz-selection,
+  code[class*='language-']::-moz-selection,
+  code[class*='language-'] ::-moz-selection {
+    background: rgb(29 59 83 / 0.99);
     text-shadow: none;
-    background: rgba(29, 59, 83, 0.99);
   }
 
-  pre[class*="language-"]::selection,
-  pre[class*="language-"] ::selection,
-  code[class*="language-"]::selection,
-  code[class*="language-"] ::selection {
+  pre[class*='language-']::selection,
+  pre[class*='language-'] ::selection,
+  code[class*='language-']::selection,
+  code[class*='language-'] ::selection {
+    background: rgb(29 59 83 / 0.99);
     text-shadow: none;
-    background: rgba(29, 59, 83, 0.99);
   }
 
   @media print {
-    code[class*="language-"],
-    pre[class*="language-"] {
+    code[class*='language-'],
+    pre[class*='language-'] {
       text-shadow: none;
     }
   }
 
   /* Code blocks */
-  pre[class*="language-"] {
-    padding: 1em;
+  pre[class*='language-'] {
     margin: 0.5em 0;
     overflow: auto;
+    padding: 1em;
   }
 
-  :not(pre) > code[class*="language-"],
-  pre[class*="language-"] {
-    color: white;
+  :not(pre) > code[class*='language-'],
+  pre[class*='language-'] {
     background: #011627;
+    color: white;
   }
 
-  :not(pre) > code[class*="language-"] {
-    padding: 0.1em;
+  :not(pre) > code[class*='language-'] {
     border-radius: 0.3em;
+    padding: 0.1em;
     white-space: normal;
   }
 
   .token.comment,
   .token.prolog,
   .token.cdata {
-    color: rgb(99, 119, 119);
+    color: rgb(99 119 119);
     font-style: italic;
   }
 
   .token.punctuation {
-    color: rgb(199, 146, 234);
+    color: rgb(199 146 234);
   }
 
   .namespace {
-    color: rgb(178, 204, 214);
+    color: rgb(178 204 214);
   }
 
   .token.deleted {
-    color: rgba(239, 83, 80, 0.56);
+    color: rgb(239 83 80 / 0.56);
     font-style: italic;
   }
 
   .token.symbol,
   .token.property {
-    color: rgb(128, 203, 196);
+    color: rgb(128 203 196);
   }
 
   .token.tag,
   .token.operator,
   .token.keyword {
-    color: rgb(127, 219, 202);
+    color: rgb(127 219 202);
   }
 
   .token.boolean {
-    color: rgb(255, 88, 116);
+    color: rgb(255 88 116);
   }
 
   .token.number {
-    color: rgb(247, 140, 108);
+    color: rgb(247 140 108);
   }
 
   .token.constant,
   .token.function,
   .token.builtin,
   .token.char {
-    color: rgb(130, 170, 255);
+    color: rgb(130 170 255);
   }
 
   .token.selector,
   .token.doctype {
-    color: rgb(199, 146, 234);
+    color: rgb(199 146 234);
     font-style: italic;
   }
 
   .token.attr-name,
   .token.inserted {
-    color: rgb(173, 219, 103);
+    color: rgb(173 219 103);
     font-style: italic;
   }
 
@@ -125,19 +125,19 @@
   .token.entity,
   .language-css .token.string,
   .style .token.string {
-    color: rgb(173, 219, 103);
+    color: rgb(173 219 103);
   }
 
   .token.class-name,
   .token.atrule,
   .token.attr-value {
-    color: rgb(255, 203, 139);
+    color: rgb(255 203 139);
   }
 
   .token.regex,
   .token.important,
   .token.variable {
-    color: rgb(214, 222, 235);
+    color: rgb(214 222 235);
   }
 
   .token.important,
