--- a/src/styles/components/prism/_light.scss
+++ b/src/styles/components/prism/_light.scss
@@ -1,83 +1,83 @@
-code[class*="language-"],
-pre[class*="language-"] {
+code[class*='language-'],
+pre[class*='language-'] {
   color: #403f53;
-  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-  text-align: left;
-  white-space: pre;
-  word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+
+  hyphens: none;
+  hyphens: none;
+  hyphens: none;
+  hyphens: none;
   line-height: 1.5;
 
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
   tab-size: 4;
-
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
+  tab-size: 4;
+  tab-size: 4;
+  text-align: left;
+  white-space: pre;
+  word-break: normal;
+  word-spacing: normal;
+  word-wrap: normal;
 }
 
-pre[class*="language-"]::-moz-selection,
-pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection,
-code[class*="language-"] ::-moz-selection {
-  text-shadow: none;
+pre[class*='language-']::-moz-selection,
+pre[class*='language-'] ::-moz-selection,
+code[class*='language-']::-moz-selection,
+code[class*='language-'] ::-moz-selection {
   background: #e0e0e0;
+  text-shadow: none;
 }
 
-pre[class*="language-"]::selection,
-pre[class*="language-"] ::selection,
-code[class*="language-"]::selection,
-code[class*="language-"] ::selection {
-  text-shadow: none;
+pre[class*='language-']::selection,
+pre[class*='language-'] ::selection,
+code[class*='language-']::selection,
+code[class*='language-'] ::selection {
   background: #e0e0e0;
+  text-shadow: none;
 }
 
 @media print {
-  code[class*="language-"],
-  pre[class*="language-"] {
+  code[class*='language-'],
+  pre[class*='language-'] {
     text-shadow: none;
   }
 }
 
 /* Code blocks */
-pre[class*="language-"] {
-  padding: 1em;
+pre[class*='language-'] {
   margin: 0.5em 0;
   overflow: auto;
+  padding: 1em;
 }
 
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-  color: white;
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
   background: #fbfbfb;
+  color: white;
 }
 
-:not(pre) > code[class*="language-"] {
-  padding: 0.1em;
+:not(pre) > code[class*='language-'] {
   border-radius: 0.3em;
+  padding: 0.1em;
   white-space: normal;
 }
 
 .token.comment,
 .token.prolog,
 .token.cdata {
-  color: rgb(152, 159, 177);
+  color: rgb(152 159 177);
   font-style: italic;
 }
 
 .token.punctuation {
-  color: rgb(153, 76, 195);
+  color: rgb(153 76 195);
 }
 
 .namespace {
-  color: rgb(12, 150, 155);
+  color: rgb(12 150 155);
 }
 
 .token.deleted {
-  color: rgba(239, 83, 80, 0.56);
+  color: rgb(239 83 80 / 0.56);
   font-style: italic;
 }
 
@@ -85,19 +85,19 @@ pre[class*="language-"] {
 .token.operator,
 .token.keyword,
 .token.property {
-  color: rgb(12, 150, 155);
+  color: rgb(12 150 155);
 }
 
 .token.tag {
-  color: rgb(153, 76, 195);
+  color: rgb(153 76 195);
 }
 
 .token.boolean {
-  color: rgb(188, 84, 84);
+  color: rgb(188 84 84);
 }
 
 .token.number {
-  color: rgb(170, 9, 130);
+  color: rgb(170 9 130);
 }
 
 .token.constant,
@@ -108,32 +108,32 @@ pre[class*="language-"] {
 .language-css .token.string,
 .style .token.string,
 .token.char {
-  color: rgb(72, 118, 214);
+  color: rgb(72 118 214);
 }
 
 .token.selector,
 .token.function,
 .token.doctype {
-  color: rgb(153, 76, 195);
+  color: rgb(153 76 195);
   font-style: italic;
 }
 
 .token.attr-name,
 .token.inserted {
-  color: rgb(72, 118, 214);
+  color: rgb(72 118 214);
   font-style: italic;
 }
 
 .token.class-name,
 .token.atrule,
 .token.attr-value {
-  color: rgb(17, 17, 17);
+  color: rgb(17 17 17);
 }
 
 .token.regex,
 .token.important,
 .token.variable {
-  color: rgb(201, 103, 101);
+  color: rgb(201 103 101);
 }
 
 .token.important,
