--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -2,6 +2,7 @@
 @use '../mixins' as *;
 
 .sidebar {
+  @include spruce.layout-stack(spruce.spacer(l));
   @include spruce.scrollbar(
     spruce.color(thumb-background, scrollbar),
     spruce.color(thumb-background-hover, scrollbar),
@@ -13,11 +14,7 @@
   overflow-y: auto;
   padding-inline-end: spruce.spacer(m);
   position: sticky;
-  top: 2rem;
-
-  > * + * {
-    margin-top: 3rem;
-  }
+  inset-block-start: 2rem;
 }
 
 .sidebar-section {
@@ -26,15 +23,13 @@
   }
 
   &__navigation {
-    border-left: 1px solid spruce.color(border);
+    border-inline-start: 1px solid spruce.color(border);
     font-size: 1rem;
-    margin: 1rem 0 0;
+    margin-block-start: 1rem;
     padding-inline-start: 1rem;
 
     ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
+      @include spruce.clear-list;
     }
 
     a {
