--- a/src/styles/components/_theme-switcher.scss
+++ b/src/styles/components/_theme-switcher.scss
@@ -20,9 +20,11 @@
     &--dark .dark { display: inline-block; }
 
     svg {
+      --dimension: 1rem;
+
       display: none;
-      height: 1rem;
-      width: 1rem;
+      height: var(--dimension);
+      width: var(--dimension);
     }
   }
 
