Refactor prism colors

--- a/src/styles/config/_dark-colors.scss
+++ b/src/styles/config/_dark-colors.scss
@@ -82,5 +82,18 @@ $colors: (
   ),
   breadcrumb: (
     arrow: hsl(0 0% 100% / 0.1)
+  ),
+  prism: (
+    color: hsl(217 34% 88%),
+    background: hsl(207 95% 8%),
+    comment: hsl(180 9% 43%),
+    punctuation: hsl(276 68% 75%),
+    namespace: hsl(197 31% 77%),
+    deleted: hsl(1 83% 63% / 0.56),
+    boolean: hsl(350 100% 67%),
+    number: hsl(14 90% 70%),
+    constant: hsl(221 100% 75%),
+    class-name: hsl(33 100% 77%),
+    regex: hsl(217 34% 88%)
   )
 );
