--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -31,6 +31,19 @@
     ),
     breadcrumb: (
       arrow: hsl(0 0% 0% / 0.1)
+    ),
+    prism: (
+      color: hsl(243 14% 29%),
+      background: hsl(0 0% 98%),
+      comment: hsl(223 14% 65%),
+      punctuation: hsl(279 50% 53%),
+      namespace: hsl(182 86% 33%),
+      deleted: hsla(1 83% 63% / 0.56),
+      boolean: hsl(0 44% 53%),
+      number: hsl(315 90% 35%),
+      constant: hsl(221 63% 56%),
+      class-name: hsl(0 0% 7%),
+      regex: hsl(1 48% 59%)
     )
   ),
   $dark-colors: dark.$colors,
