--- a/src/styles/components/_notification.scss
+++ b/src/styles/components/_notification.scss
@@ -69,7 +69,7 @@
     background-color: spruce.color(background);
     border: 4px solid spruce.color(background);
     border-radius: 1rem;
-    inset: calc(-1rem - 4px) -1rem auto;
+    inset: calc(-1rem - 4px) -1rem auto auto;
     height: 2rem;
     position: absolute;
     width: 2rem;
