--- a/src/styles/components/_preview.scss
+++ b/src/styles/components/_preview.scss
@@ -1,7 +1,10 @@
 @use '~sprucecss/scss/spruce';
 
 .preview {
-  @include spruce.layout-stack(spruce.spacer(m));
+  @include spruce.layout-stack(
+    spruce.spacer(m),
+    $important: true
+  );
   border: 1px solid spruce.color(border);
   border-radius: spruce.$border-radius-sm;
   font-size: 1rem;
