Rework site footer

--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -1,7 +1,7 @@
 @forward 'cookie-consent';
 @forward 'site-header';
 @forward 'doc-cards';
-@forward 'footer';
+@forward 'site-footer';
 @forward 'hero';
 @forward 'card';
 @forward 'notification';
