--- a/src/styles/layouts/article/_post-content.scss
+++ b/src/styles/layouts/article/_post-content.scss
@@ -4,7 +4,7 @@
   @include spruce.layout-stack(spruce.spacer(m));
 
   &--blog {
-    :is(dd, dl, dl, h1, h2, h3, h4, h5, h6, hr, ul, ol, p, blockquote, .prism-code-wrapper, .notification) {
+    > :is(dd, dl, dl, h1, h2, h3, h4, h5, h6, hr, ul, ol, p, blockquote, .prism-code-wrapper, .notification) {
       @include spruce.layout-center(
         null,
         45rem
