Color change updates

--- a/src/styles/components/_doc-cards.scss
+++ b/src/styles/components/_doc-cards.scss
@@ -1,7 +1,7 @@
 @use '~sprucecss/scss/spruce';
 
 .doc-cards {
-  margin-bottom: spruce.spacer(xl);
+  margin-block-end: clamp(spruce.spacer(xl), 8vw, 7rem);
 
   &__inner {
     @include spruce.layout-grid(spruce.spacer(l), 20rem);
