--- a/src/styles/config/_dark-colors.scss
+++ b/src/styles/config/_dark-colors.scss
@@ -28,7 +28,7 @@ $colors: (
     code-background: hsl(207 64% 21%),
     code-foreground: $color-white,
     blockquote-border: $color-primary,
-    getting-started: #072135
+    footer-background: hsl(0 0% 0% / 0.15)
   ),
   selection: (
     foreground: $color-white,
