--- a/src/styles/components/_prism.scss
+++ b/src/styles/components/_prism.scss
@@ -16,6 +16,7 @@
     font-weight: 500;
     inset: 1rem 1rem auto auto;
     line-height: 1;
+    pointer-events: none;
     position: absolute;
     text-transform: uppercase;
   }
