--- a/src/styles/config/_dark-mode.scss
+++ b/src/styles/config/_dark-mode.scss
@@ -11,7 +11,7 @@
   select.form-control:not([multiple]):not([size]) {
     @include spruce.field-icon(
       spruce.$select-image,
-      hsl(0 0% 100%)
+      spruce.color(select-foreground, form, true, spruce.$dark-colors)
     );
   }
 
