--- a/src/styles/components/card/_example.scss
+++ b/src/styles/components/card/_example.scss
@@ -8,7 +8,7 @@
 
   &__thumbnail {
     border: 1px solid spruce.color(border);
-    border-radius: spruce.$border-radius-lg;
+    border-radius: spruce.$border-radius-sm;
   }
 
   &__caption {
