--- a/src/styles/layouts/article/_post-content.scss
+++ b/src/styles/layouts/article/_post-content.scss
@@ -38,7 +38,7 @@
 
   img,
   iframe {
-    border-radius: spruce.$border-radius-lg;
+    border-radius: spruce.$border-radius-sm;
   }
 
   > .gatsby-image-wrapper:first-child + * {
