--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@ h6 {
   font-family: var(--doc-heading-font-family);
 }
 
+.btn--rounded { border-radius: spruce.$border-radius-lg; }
 .btn--install { @include spruce.btn-variant(install); }
 .btn--decline { @include spruce.btn-variant(decline); }
 
