Custom code highlighter styling

--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -29,6 +29,9 @@
     breadcrumb: (
       arrow: hsl(0 0% 0% / 0.1)
     ),
+    code-highlighter: (
+      header-background: hsl(222 100% 98%)
+    ),
     prism: (
       color: hsl(243 14% 29%),
       background: hsl(0 0% 98%),
