--- a/src/styles/layouts/_component.scss
+++ b/src/styles/layouts/_component.scss
@@ -1,23 +1,24 @@
 @use '~sprucecss/scss/spruce';
 
 .l-component {
-  padding-block-start: spruce.spacer-clamp(m, l);
   padding-block-end: spruce.spacer-clamp(l, xl);
 
   &__header {
     @include spruce.layout-stack(s);
-    margin-block-end: spruce.spacer-clamp(l, xl);
+    margin-block: spruce.spacer-clamp(xl, xxl);
     max-width: 70ch;
   }
 
-  &__body {
+  &__code-highlighter {
+    margin-block-end: spruce.spacer-clamp(l, xl);
+  }
+
+  &__inner {
     column-gap: spruce.spacer(xl);
     display: grid;
     grid-auto-rows: min-content;
     grid-template-columns: minmax(0, 1fr);
-    padding-block-start: spruce.spacer-clamp(l, xl);
     row-gap: spruce.spacer(m);
-
 
     @include spruce.breakpoint(lg) {
       grid-template-columns: minmax(0, 15rem) minmax(0, 3.5fr) minmax(0, 15rem);
@@ -34,6 +35,6 @@
       $scaler: 40,
       $optimal-size: '3vw + 1rem'
     );
-    margin: 0;
+    margin-block: 0;
   }
 }
