--- a/src/styles/config/_config.scss
+++ b/src/styles/config/_config.scss
@@ -11,11 +11,15 @@
       footer-background: hsl(222 100% 98%)
     ),
     btn: (
-      install-background: hsl(0, 0%, 95%),
-      install-background-hover: hsl(0, 0%, 90%),
-      install-foreground: hsl(0, 0%, 10%),
-      decline-background: hsl(207, 39%, 17%),
-      decline-foreground: hsl(0, 0%, 100%)
+      install-background: hsl(0 0% 95%),
+      install-background-hover: hsl(0 0% 90%),
+      install-foreground: hsl(0 0% 10%),
+      decline-background: hsl(207 39% 17%),
+      decline-foreground: hsl(0 0% 100%),
+      discrete-background: hsla(206 40% 17% / 0.1),
+      discrete-background-hover: hsl(262 71% 49%),
+      discrete-foreground: hsl(0 0% 10%),
+      discrete-foreground-hover: hsl(0 0% 100%)
     ),
     cookie: (
       background: hsl(207 95% 8%),
