Refactor code tab

--- a/src/styles/components/_code-tab.scss
+++ b/src/styles/components/_code-tab.scss
@@ -1,6 +1,6 @@
 @use '~sprucecss/scss/spruce';
 
-.code-highlighter {
+.code-tab {
   border: 1px solid spruce.color(border);
   border-radius: spruce.$border-radius-sm;
   overflow: hidden;
