--- a/src/styles/components/_index.scss
+++ b/src/styles/components/_index.scss
@@ -13,5 +13,5 @@
 @forward 'page-heading';
 @forward 'heading';
 @forward 'getting-started';
-@forward 'code-highlighter';
+@forward 'code-tab';
 @forward 'prism';
