--- a/src/styles/components/_code-tab.scss
+++ b/src/styles/components/_code-tab.scss
@@ -29,9 +29,12 @@
   }
 
   &__group {
+    @include spruce.clear-list;
     align-items: center;
     display: flex;
     gap: spruce.spacer(xxs) spruce.spacer(xs);
+
+    > * + * { margin-block-start: 0; }
 
     &--column {
       align-items: flex-start;
